syntax = "proto3";

package calculator;

option go_package = "./calculator/calculatorpb";

message SumRequest{
  int32 FirstNumber = 1;
  int32 SecNumber = 2;
}
message SumResponse{
  int32 Result = 1;
}

service Calculator{
  rpc Sum(SumRequest)returns (SumResponse);


  // error handling
  // this RPC will throw an exception if the sent number is negative
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){}
}
message SquareRootRequest{
  int32   number = 1;
}
message SquareRootResponse{
  double number_root = 1;
}